--- a/01_python/03_Find_and_solve_errors.ipynb
+++ b/01_python/03_Find_and_solve_errors.ipynb
@@ -18,37 +18,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2533c2ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n"
+     ]
+    }
+   ],
    "source": [
-    "a = \"asdf\"\n",
-    "if \"s\" in a:\n",
-    "    print(\"ok\")\n",
+    "a = 'asdf'\n",
+    "if \"s\" in 'a':\n",
+    "    print ('ok')\n",
     "else:\n",
-    "    print(\"error\")"
+    "    print ('error')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "536828c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def do_something():\n",
     "    pass\n",
     "\n",
     "def do_something_else():\n",
     "    pass\n",
     "\n",
+    "def do():\n",
+    "    pass\n",
+    "\n",
+    "\n",
     "a = 100\n",
     "if a == 100:\n",
     "    do_something();\n",
     "elif a < 50:\n",
-    "    do_something_else(); print('hola')\n",
+    "    do_something_else();\n",
     "else:\n",
     "    do();"
    ]
@@ -63,15 +74,28 @@
     "open = open('data/file.csv')\n",
     "for line in open:\n",
     "    print(line)\n",
-    "open.close()"
+    "close(open)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "47f6135c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/file.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m f \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mdata/file.csv\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      2\u001b[0m f\u001b[39m.\u001b[39mread()\n\u001b[0;32m      3\u001b[0m f\u001b[39m.\u001b[39mclose()\n",
+      "File \u001b[1;32mc:\\Users\\rober\\anaconda3\\envs\\python-course\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/file.csv'"
+     ]
+    }
+   ],
    "source": [
     "f = open('data/file.csv')\n",
     "f.read()\n",
@@ -80,40 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b2400c14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0, 10):\n",
     "    print(i)\n",
     "# without executing it. Which is the last number that's going to be printed?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebf24be4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
