--- a/01_python/04_good_practices.ipynb
+++ b/01_python/04_good_practices.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2bde2ac9",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "caef6198",
    "metadata": {},
    "outputs": [
@@ -59,8 +59,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object generate_numbers at 0x7f9a18a968e0>\n",
-      "<generator object generate_numbers at 0x7f9a18e75560>\n"
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n"
      ]
     }
    ],
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "cd8b5791",
    "metadata": {},
    "outputs": [
@@ -93,14 +101,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.8 µs ± 530 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "946 ms ± 51.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "def generate_list():\n",
     "    total = []\n",
-    "    for i in range (1, 1000):\n",
+    "    for i in range (1, 10000000):\n",
     "        if i%3 == 0:\n",
     "            total.append(i)\n",
     "    return total\n",
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "69e378f5",
    "metadata": {},
    "outputs": [
@@ -118,12 +126,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.1 µs ± 228 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "607 ms ± 103 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit total = [i for i in range (1, 1000) if i%3 == 0]\n"
+    "%timeit total = [i for i in range (1, 10000000) if i%3 == 0]\n"
    ]
   },
   {
@@ -240,6 +248,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "def linux_interaction():\n",
     "    assert ('linux' in sys.platform), \"Function can only run on Linux systems.\"\n",
     "    print('Doing something.')"
@@ -380,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
