--- a/01_python/05_exercises.ipynb
+++ b/01_python/05_exercises.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "451c51e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "be9d20e3",
    "metadata": {},
@@ -24,18 +35,59 @@
     " * orange 2.3€/each\n",
     " * pear 5.3€/each\n",
     " * pineapple 15€/each\n",
-    " * kiwi 4€/each\n",
     " \n",
     "Could you compute the price of the shopping card?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "825bdb53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 1, 10, 2]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_lst = [4, 1, 10, 2]\n",
+    "shopping_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "96031552",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_lst = [4, 1, 10, 2]\n",
+    "shopping_prices = [6.8, 2.3, 5.3, 15]\n",
+    "\n",
+    "shopping_sum = 0\n",
+    "for item, price in zip(shopping_lst, shopping_prices):\n",
+    "    shopping_sum += item * price\n",
+    "\n",
+    "shopping_sum\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,22 +115,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "45496aea",
+   "execution_count": 4,
+   "id": "492e614a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_second_file(initial_path: str) -> str:\n",
-    "    pass"
+    "\n",
+    "base_path = os.path.join(os.getcwd(), \"data\")\n",
+    "input_path = os.path.join(base_path, 'test.txt')\n",
+    "output_path = os.path.join(base_path, 'uppter_test.txt')\n",
+    "\n",
+    "with open(input_path, 'r') as f:\n",
+    "    text = f.read()\n",
+    "\n",
+    "modified_text = text.upper()\n",
+    "\n",
+    "with open(output_path, \"w\") as file:\n",
+    "    file.write(modified_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "85be53c3",
+   "execution_count": 5,
+   "id": "45496aea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def generate_second_file(initial_path: str) -> str:\n",
+    "    with open(initial_path, 'r') as f:\n",
+    "        text = f.read()\n",
+    "\n",
+    "    modified_text = text.upper()\n",
+    "    output_path = initial_path.replace('test', 'upper_test')\n",
+    "\n",
+    "    with open(output_path, \"w\") as file:\n",
+    "        file.write(modified_text)\n",
+    "\n",
+    "base_path = os.path.join(os.getcwd(), \"data\")\n",
+    "input_path = os.path.join(base_path, 'test.txt')\n",
+    "generate_second_file(input_path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,11 +196,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a1291bc7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pepper', 'summer']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_var = [ \n",
+    "   { \n",
+    "      \"id\":1,\n",
+    "      \"name\":\"pepper\",\n",
+    "      \"color\":[ \n",
+    "         \"red\",\n",
+    "         \"green\",\n",
+    "         \"yellow\"\n",
+    "      ]\n",
+    "   },\n",
+    "   { \n",
+    "      \"id\":2,\n",
+    "      \"name\":\"summer\",\n",
+    "      \"color\":[ \n",
+    "         \"red\",\n",
+    "         \"yellow\",\n",
+    "         \"orange\"\n",
+    "      ]\n",
+    "   }\n",
+    "]\n",
+    "\n",
+    "[d['name'] for d in json_var]\n",
+    "\n",
+    "# Save dict as json:\n",
+    "with open(\"data/json_file.json\", \"w\") as outfile:\n",
+    "    json.dump(json_var, outfile)\n",
+    "\n",
+    "# Now, read it\n",
+    "\n",
+    "with open(\"data/json_file.json\", \"r\") as infile:\n",
+    "    data = json.load(infile)\n",
+    "\n",
+    "[d['name'] for d in data]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,11 +259,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "15493c97",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "import os\n",
+    "\n",
+    "url_base = \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/\"\n",
+    "\n",
+    "file_types = [\"confirmed\", \"deaths\", \"recovered\"]\n",
+    "\n",
+    "for file_type in file_types:\n",
+    "    url = url_base + f\"time_series_covid19_{file_type}_global.csv\"\n",
+    "    response = requests.get(url)\n",
+    "    content = response.content\n",
+    "    csv_file = pd.read_csv(BytesIO(content))\n",
+    "    if not os.path.exists(os.path.join(os.getcwd(), \"data\")):\n",
+    "        os.makedirs(os.path.join(os.getcwd(), \"data\"))\n",
+    "    csv_file.to_csv(os.path.join(os.getcwd(), \"data\", f\"time_series_covid19_{file_type}_global.csv\"), index=False)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,28 +292,53 @@
     "\n",
     "Explore file data/time_series_covid19_confirmed_global.csv and compute the number of positive cases in Canada the first of January 2021.\n",
     "\n",
-    "\n",
     "1. Do not use pandas\n",
     "2. Do not use a web ide"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2ef9e1a4",
-   "metadata": {},
-   "source": [
-    "## Exercise 6\n",
-    "\n",
-    "Which countries do have \"State/Province\"?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "862441b2",
+   "execution_count": 9,
+   "id": "2008d34f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "186330\n",
+      "14084\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import csv\n",
+    "\n",
+    "# Read the CSV file\n",
+    "with open('data/time_series_covid19_confirmed_global.csv', 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    header = next(reader)  # Skip the header row\n",
+    "\n",
+    "    # Find the index of the second column\n",
+    "    col_index = 1\n",
+    "\n",
+    "    # Find the indices of the columns corresponding to January 2021\n",
+    "    jan_indices = []\n",
+    "    for i, col in enumerate(header):\n",
+    "        if col.startswith('1/1/21') or col.endswith('1/31/21'):\n",
+    "            jan_indices.append(i)\n",
+    "    \n",
+    "\n",
+    "    # Find the rows with Canada in the second column and sum the corresponding numbers\n",
+    "    total = 0\n",
+    "    for row in reader:\n",
+    "        if row[col_index] == 'Canada':\n",
+    "            total += int(row[jan_indices[1]]) - int(row[jan_indices[0]])\n",
+    "\n",
+    "print(total)\n",
+    "print(int(row[jan_indices[0]]))\n"
+   ]
   }
  ],
  "metadata": {
@@ -192,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
