--- a/02_numpy/numpy.ipynb
+++ b/02_numpy/numpy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 millones de elementos\n",
+      "40000056\n",
+      "20000112\n",
+      "\n",
+      "100 elementos\n",
+      "856\n",
+      "212\n"
+     ]
+    }
+   ],
    "source": [
     "# AVISO: SYS.GETSYZEOF NO ES FIABLE (Siempre)\n",
     "\n",
@@ -132,9 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26 ms ± 2.61 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "499999500000\n"
+     ]
+    }
+   ],
    "source": [
     "a = list(range(1_000_000))\n",
     "%timeit sum(a)\n",
@@ -143,9 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "279 µs ± 2.91 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1783293664\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array(a)\n",
     "%timeit np.sum(a)\n",
@@ -509,9 +541,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mDocstring:\u001b[0m\n",
+      "empty_like(prototype, dtype=None, order='K', subok=True, shape=None)\n",
+      "\n",
+      "Return a new array with the same shape and type as a given array.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "prototype : array_like\n",
+      "    The shape and data-type of `prototype` define these same attributes\n",
+      "    of the returned array.\n",
+      "dtype : data-type, optional\n",
+      "    Overrides the data type of the result.\n",
+      "\n",
+      "    .. versionadded:: 1.6.0\n",
+      "order : {'C', 'F', 'A', or 'K'}, optional\n",
+      "    Overrides the memory layout of the result. 'C' means C-order,\n",
+      "    'F' means F-order, 'A' means 'F' if `prototype` is Fortran\n",
+      "    contiguous, 'C' otherwise. 'K' means match the layout of `prototype`\n",
+      "    as closely as possible.\n",
+      "\n",
+      "    .. versionadded:: 1.6.0\n",
+      "subok : bool, optional.\n",
+      "    If True, then the newly created array will use the sub-class\n",
+      "    type of `prototype`, otherwise it will be a base-class array. Defaults\n",
+      "    to True.\n",
+      "shape : int or sequence of ints, optional.\n",
+      "    Overrides the shape of the result. If order='K' and the number of\n",
+      "    dimensions is unchanged, will try to keep order, otherwise,\n",
+      "    order='C' is implied.\n",
+      "\n",
+      "    .. versionadded:: 1.17.0\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "out : ndarray\n",
+      "    Array of uninitialized (arbitrary) data with the same\n",
+      "    shape and type as `prototype`.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "ones_like : Return an array of ones with shape and type of input.\n",
+      "zeros_like : Return an array of zeros with shape and type of input.\n",
+      "full_like : Return a new array with shape of input filled with value.\n",
+      "empty : Return a new uninitialized array.\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "This function does *not* initialize the returned array; to do that use\n",
+      "`zeros_like` or `ones_like` instead.  It may be marginally faster than\n",
+      "the functions that do set the array values.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> a = ([1,2,3], [4,5,6])                         # a is array-like\n",
+      ">>> np.empty_like(a)\n",
+      "array([[-1073741821, -1073741821,           3],    # uninitialized\n",
+      "       [          0,           0, -1073741821]])\n",
+      ">>> a = np.array([[1., 2., 3.],[4.,5.,6.]])\n",
+      ">>> np.empty_like(a)\n",
+      "array([[ -2.00000715e+000,   1.48219694e-323,  -2.00000572e+000], # uninitialized\n",
+      "       [  4.38791518e-305,  -2.00000715e+000,   4.17269252e-309]])\n",
+      "\u001b[1;31mType:\u001b[0m      function"
+     ]
+    }
+   ],
    "source": [
     "# Play area\n",
     "\n"
@@ -1024,9 +1125,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000000,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Play area\n"
    ]
@@ -1433,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
